other/ingress-for-vote-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: selfsigned-root-issuer
  name: myIngress
  namespace: vote-app
spec:
  rules:
  - host: vote-app.bylo.de
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vote-app
            port:
              number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - vote-app.bylo.de
    secretName: myingress-cert # < cert-manager will store the created certificate in this secret.
